# ewatercycle-sfincs

./: .gitignore  README.md  pyproject.toml
docs/: model.ipynb
src/ewatercycle_sfincs/: model.py
